had to switch to classic to avoid link problems in coverflow

--- a/components/bespoke.js/demo/style.css
+++ b/components/bespoke.js/demo/style.css
@@ -106,7 +106,7 @@ section.bespoke-slide {
 }
 section.bespoke-active {
 	opacity: 1;
-	z-index: 1;
+	z-index: 10;
 }
 
 /*
